[package]
name = "grpc-health-check"
version = "0.0.1"
edition = "2024"

authors = ["Jakub Jantosik <jakub.jantosik@gmail.com>"]
description = "A health-check utility for grpc services."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jammymalina/grpc-health-check"
keywords = ["grpc", "cli", "utility"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
prost = "0.14.1"
tokio = { version = "1", features = ["macros"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
anyhow = "1.0.100"
tonic-prost-build = "0.14.2"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
